# abs_rumble_driver

./: .gitignore  README.md  fake_ac.py
abs_rumble_esp/: CMakeLists.txt  sdkconfig
abs_rumble_esp/main/: CMakeLists.txt  abs_rumbler.cpp
abs_rumble_esp/main/inc/: board.h  client.h  esp32.h
abs_rumble_esp/main/src/: client.cpp  esp32.cpp  motor.cpp
abs_rumble_gui/: CMakeLists.txt
abs_rumble_gui/inc/: Backend.h  ISerial.h  MockSerial.h  Serial.h
abs_rumble_gui/src/: Backend.cpp  main.cpp
abs_rumble_gui/src/qml/: main.qml
abs_rumble_wsl/: Makefile
abs_rumble_wsl/inc/: client.h  mock_board.h  motor.h
abs_rumble_wsl/src/: client.cpp  main.cpp
firmware/components/motor/: motor.cpp
firmware/components/protocol/: protocol.h
firmware/targets/esp32/: CMakeLists.txt
firmware/targets/esp32/main/: idf_component.yml
firmware/targets/esp32/main/inc/: esp32.h
firmware/targets/esp32/main/src/: client.cpp  esp32.cpp
firmware/targets/wsl_mock/: Makefile
firmware/targets/wsl_mock/inc/: client.h
firmware/targets/wsl_mock/src/: mock_board.cpp
software/: CMakeLists.txt
software/inc/: Backend.h  ISerial.h
software/src/: Backend.cpp  Serial.cpp  main.cpp
